<package format="2">
  <name>imu_coordinate_transformer</name>
  <version>0.0.1</version>
  <description>template_ros_node packages</description>
  <maintainer email="kelvinkang@cmu.edu">kelvinkang</maintainer>
  <license>proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>message_generation</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
